# plugins_demo_using_dlopen

./: CMakeLists.txt  README.md  main.cpp  null_plugin.cpp  plugin.h
